collector-one.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    ns: collector
  name: collector-one
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  namespace: collector-one
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
       - name: nginx
         image: nginx
         volumeMounts:
          - name: mynginx-config
            mountPath: "/etc/nginx/conf.d"
            readOnly: true
      volumes:
         - name: mynginx-config
           configMap:
             name: nginx-conf
...
---
apiVersion: v1
kind: Service
metadata:
  name: collector 
  namespace: collector-one
spec:
  ports:
  - name: port8888
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: port9999
    port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: app-one
  type: ClusterIP
...
