01-deny-all-egress-appx.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: appx
spec:
  podSelector: {}
  policyTypes:
  - Egress
