02-allow2coredns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-coredns
  namespace: appx
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
       - namespaceSelector:
            matchLabels:
               kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
