03-allow2collector-port8888.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-collector-port8888
  namespace: appx
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
       - namespaceSelector:
            matchLabels:
             ns: collector
      ports:
        - protocol: TCP
          port: 8888
